# autofocus

./: .gitignore  CMakeLists.txt  README.md  autofocus_exe  autofocusdlltest  dllimporttest.py  import_dll_example.py  import_so_example.py  run_so_example.sh  scratch_import.py  soimporttest.py
src/: autofocus.cpp  autofocus.hpp  autofocusdlltest.cpp  autofocussotest.cpp  dllexport.h
